OllyTiper.2.0/OllyTiper/Plugin.h


typedef unsigned char  uchar;          
typedef unsigned long  ulong;          
#define TEXTLEN        256             
#define INT3           0xCC            
typedef struct t_reg {                 
  int            modified;             
  int            modifiedbyuser;       
  int            singlestep;           
  ulong          r[8];                 
  ulong          ip;                   
  ulong          flags;                
  int            top;                  
  long double    f[8];                 
  char           tag[8];               
  ulong          fst;                  
  ulong          fcw;                  
  ulong          s[6];                 
  ulong          base[6];              
  ulong          limit[6];             
  char           big[6];               
  ulong          dr6;                  
  ulong          threadid;             
  ulong          lasterror;            
  int            ssevalid;             
  int            ssemodified;          
  char           ssereg[8][16];        
  ulong          mxcsr;                
  int            selected;             
  ulong          drlin[4];             
  ulong          dr7;                  
} t_reg;
typedef struct t_symvar {              
  int            next;                 
  ushort         kind;                 
  union {
    ulong        type;                 
    ulong        regs; };              
  union {
    ulong        addr;                 
    long         offset; };            
  ulong          size;                 
  int            optvar;               
  ulong          nameaddr;             
} t_symvar;
typedef struct t_module {              
  ulong          base;                 
  ulong          size;                 
  ulong          type;                 
  ulong          codebase;             
  ulong          codesize;             
  ulong          resbase;              
  ulong          ressize;              
  t_stringtable  *stringtable;         
  int            nstringtable;         
  int            maxstringtable;       
  ulong          entry;                
  ulong          database;             
  ulong          idatatable;           
  ulong          idatabase;            
  ulong          edatatable;           
  ulong          edatasize;            
  ulong          reloctable;           
  ulong          relocsize;            
  char           name[SHORTLEN];       
  char           path[MAX_PATH];       
  int            nsect;                
  IMAGE_SECTION_HEADER *sect;          
  ulong          headersize;           
  ulong          fixupbase;            
  int            nfixup;               
  t_fixup        *fixup;               
  char           *codedec;             
  ulong          codecrc;              
  char           *hittrace;            
  char           *hittracecopy;        
  char           *datadec;             
  t_table        namelist;             
  t_symvar       *symvar;              
  int            nsymvar;              
  int            maxsymvar;            
  char           *globaltypes;         
  ulong          mainentry;            
  ulong          realsfxentry;         
  int            updatenamelist;       
  ulong          origcodesize;         
  ulong          sfxbase;              
  ulong          sfxsize;              
  int            issystemdll;          
  int            processed;            
  int            dbghelpsym;           
  char           version[NVERS];       
  t_jdest        *jddata;              
  int            njddata;              
  ulong          reserved[15];         
} t_module;
typedef struct t_bpoint {              
  ulong          addr;                 
  ulong          dummy;                
  ulong          type;                 
  char           cmd;                  
  ulong          passcount;            
} t_bpoint;
typedef struct t_hardbpoint {          
  ulong          addr;                 
  int            size;                 
  int            type;                 
  ulong          reserved[4];          
} t_hardbpoint;
extc int     cdecl Setbreakpoint(ulong addr,ulong type,uchar cmd);
extc int     cdecl Setbreakpointext(ulong addr,ulong type,char cmd,
               ulong passcount);
extc int     cdecl Manualbreakpoint(ulong addr,
               int key,int shiftkey,ulong nametype,int font);
extc void    cdecl Deletebreakpoints(ulong addr0,ulong addr1,int silent);
extc ulong   cdecl Getbreakpointtype(ulong addr);
extc ulong   cdecl Getbreakpointtypecount(ulong addr,ulong *passcount);
extc ulong   cdecl Getnextbreakpoint(ulong addr,ulong *type,int *cmd);
extc void    cdecl Tempbreakpoint(ulong addr,int mode);
extc int     cdecl Hardbreakpoints(int closeondelete);
extc int     cdecl Sethardwarebreakpoint(ulong addr,int size,int type);
extc int     cdecl Deletehardwarebreakpoint(int index);
extc int     cdecl Deletehardwarebreakbyaddr(ulong addr);
extc int     cdecl Setmembreakpoint(int type,ulong addr,ulong size);
extc uchar*  cdecl Findhittrace(ulong addr,uchar **ptracecopy,ulong *psize);
extc int     cdecl Modifyhittrace(ulong addr0,ulong addr1,int mode);
extc ulong   cdecl Isretaddr(ulong retaddr,ulong *procaddr);
extc HWND    cdecl Creatertracewindow(void);
extc void    cdecl Settracecondition(char *cond,int onsuspicious,
               ulong in0,ulong in1,ulong out0,ulong out1);
extc void    cdecl Settracecount(ulong count);
extc void    cdecl Settracepauseoncommands(char *cmdset);
extc int     cdecl Startruntrace(t_reg *preg);
extc void    cdecl Deleteruntrace(void);
extc int     cdecl Runtracesize(void);
extc int     cdecl Findprevruntraceip(ulong ip,int startback);
extc int     cdecl Findnextruntraceip(ulong ip,int startback);
extc int     cdecl Getruntraceregisters(int nback,t_reg *preg,
               t_reg *pold,char *cmd,char *comment);
extc int     cdecl Getruntraceprofile(ulong addr,ulong size,ulong *profile);
extc void    cdecl Scrollruntracewindow(int back);
extc HWND    cdecl Createprofilewindow(ulong base,ulong size);
typedef int INJECTANSWER(char *data,ulong datasize,ulong parm2);
typedef struct t_inject {              
  ulong          codesize;             
  char           *code;                
  int            stacksize;            
  int            datatype;             
} t_inject;
extc int     cdecl Injectcode(ulong threadid,t_inject *inject,char *data,
               ulong datasize,ulong parm1,ulong parm2,
               INJECTANSWER *answerfunc);
#define CPU_ASMHIST    0x00001         
#define CPU_ASMCENTER  0x00004         
#define CPU_ASMFOCUS   0x00008         
#define CPU_DUMPHIST   0x00010         
#define CPU_DUMPFIRST  0x00020         
#define CPU_DUMPFOCUS  0x00080         
#define CPU_REGAUTO    0x00100         
#define CPU_RUNTRACE   0x00200         
#define CPU_STACKFOCUS 0x00800         
#define CPU_NOCREATE   0x04000         
#define CPU_REDRAW     0x08000         
#define CPU_NOFOCUS    0x10000         
extc void    cdecl Setcpu(ulong threadid,ulong asmaddr,
               ulong dumpaddr,ulong stackaddr,int mode);
extc void    cdecl Setdisasm(ulong asmaddr,ulong selsize,int mode);
extc void    cdecl Redrawdisassembler(void);
extc void    cdecl Getdisassemblerrange(ulong *pbase,ulong *psize);
extc ulong   cdecl Findprocbegin(ulong addr);
extc ulong   cdecl Findprocend(ulong addr);
extc ulong   cdecl Findprevproc(ulong addr);
extc ulong   cdecl Findnextproc(ulong addr);
extc int     cdecl Getproclimits(ulong addr,ulong *start,ulong *end);
extc void    cdecl Sendshortcut(int where,ulong addr,
               int msg,int ctrl,int shift,int vkcode);
#define STEP_SAME      0               
#define STEP_RUN       1               
#define STEP_OVER      2               
#define STEP_IN        3               
#define STEP_SKIP      4               
typedef enum t_status {                
  STAT_NONE=0,                         
  STAT_STOPPED,                        
  STAT_EVENT,                          
  STAT_RUNNING,                        
  STAT_FINISHED,                       
  STAT_CLOSING                         
} t_status;
extc t_status cdecl Getstatus(void);
extc int     cdecl Go(ulong threadid,ulong tilladdr,int stepmode,
               int givechance,int backupregs);
extc int     cdecl Suspendprocess(int processevents);
#define DASC_TEST      0               
#define DASC_NOHEX     1               
#define DASC_ASCII     2               
#define DASC_PASCAL    3               
extc uchar*  cdecl Findknownfunction(ulong addr,int direct,
               int level,char *fname);
extc int     cdecl Decodeknownargument(ulong addr,uchar *arg,ulong value,
               int valid,char *s,char *mask,uchar *pset[]);
extc char    cdecl *Findunknownfunction(ulong ip,char *code,char *dec,
               ulong size,char *fname);
extc int     cdecl Decodeascii(ulong value,char *s,int len,int mode);
extc int     cdecl Decodeunicode(ulong value,char *s,int len);
#define FIRST_CODE_LINE 0xFFFFFFFF     
typedef struct t_sourceline {          
  ulong          addr;                 
  ulong          size;                 
  ulong          srcname;              
  ulong          line;                 
} t_sourceline;
extc HWND    cdecl Showsourcefromaddress(ulong addr,int show);
extc int     cdecl Getresourcestring(t_module *pm,ulong id,char *s);
extc t_sourceline* cdecl Getlinefromaddress(ulong addr);
extc ulong   cdecl Getaddressfromline(ulong addr0,ulong addr1,
               char *path,ulong line);
extc int     cdecl Getsourcefilelimits(ulong nameaddr,
               ulong *addr0,ulong *addr1);
extc int     cdecl Decodefullvarname(t_module *pmod,t_symvar *psym,
               int offset,char *name);
extc int     cdecl Getbprelname(t_module *pmod,ulong addr,long offset,
               char *s,int nsymb);
extc HWND    cdecl Createwatchwindow(void);
extc int     cdecl Deletewatch(int indexone);
extc int     cdecl Insertwatch(int indexone,char *text);
extc int     cdecl Getwatch(int indexone,char *text);
#define MAXNEST        32              
typedef struct t_window {              
  ulong          hwnd;                 
  ulong          dummy;                
  ulong          type;                 
  ulong          parenthw;             
  ulong          winproc;              
  ulong          threadid;             
  ulong          exstyle;              
  ulong          style;                
  ulong          id;                   
  ulong          classproc;            
  int            child;                
  int            level;                
  int            sibling;              
  int            byparent;             
  char           title[TEXTLEN];       
  char           classname[TEXTLEN];   
  char           tree[MAXNEST];        
} t_window;
extc HWND    cdecl Createwinwindow(void);
typedef struct t_patch {
  ulong          addr;                 
  ulong          size;                 
  ulong          type;                 
  char           orig[TEXTLEN];        
  char           mod[TEXTLEN];         
} t_patch;
extc HWND    cdecl Createpatchwindow(void);