Loadsome2/src/Plugin.pas


type
  p_bpoint = ^t_bpoint;
  t_bpoint = packed record              // Description of INT3 breakpoint
    addr: ULONG;                        // Address of breakpoint
    dummy: ULONG;                       // Always 1
    ltype: ULONG;                       // Type of breakpoint, TY_xxx
    cmd: Char;                          // Old value of command
    passcount: ULONG;                   // Actual pass count
  end;

  p_hardbpoint = ^t_hardbpoint;
  t_hardbpoint = packed record          // Description of hardware breakpoint
    addr: ULONG;                        // Base address of hardware breakpoint
    size: Integer;                      // Size of hardware breakpoint
    itype: Integer;                     // Type of breakpoint, one of HB_xxx
    reserved: array[0..3] of ULONG;     // Reserved for the future
  end;

function Setbreakpoint(addr: ULONG; ltype: ULONG; cmd: Char): Integer; cdecl;

function Setbreakpointext(addr: ULONG; ltype: ULONG; cmd: Char; passcount: ULONG): Integer; cdecl;

function Manualbreakpoint(addr: ULONG; key: Integer; shiftkey: Integer;
                          nametype: ULONG; font: Integer): Integer; cdecl;

procedure Deletebreakpoints(addr0: ULONG; addr1: ULONG; silent: Integer); cdecl;

function Getbreakpointtype(addr: ULONG): ULONG; cdecl;

function Getbreakpointtypecount(addr: ULONG; passcount: PULONG): ULONG; cdecl;

function Getnextbreakpoint(addr: ULONG; ptype: PULONG; cmd: PInteger): ULONG; cdecl;

procedure Tempbreakpoint(addr: ULONG; mode: Integer); cdecl;

function Hardbreakpoints(closeondelete: Integer): Integer; cdecl;

function Sethardwarebreakpoint(addr: ULONG; size: Integer; itype: Integer): Integer; cdecl;

function Deletehardwarebreakpoint(index: Integer): Integer; cdecl;

function Deletehardwarebreakbyaddr(addr: ULONG): Integer; cdecl;

function Setmembreakpoint(itype: Integer; addr: ULONG; size: ULONG): Integer; cdecl;

function Findhittrace(addr: ULONG; ptracecopy: PPChar; psize: PULONG): PChar; cdecl;

function Modifyhittrace(addr0: ULONG; addr1: ULONG; mode: Integer): Integer; cdecl;

function Isretaddr(retaddr: ULONG; procaddr: PULONG): ULONG; cdecl;

function Creatertracewindow: HWND; cdecl;

procedure Settracecondition(cond: PChar; onsuspicious: Integer;
                            in0: ULONG; in1: ULONG;
                            out0: ULONG; out1: ULONG); cdecl;

procedure Settracecount(count: ULONG); cdecl;

procedure Settracepauseoncommands(cmdset: PChar); cdecl;

function Startruntrace(preg: p_reg): Integer; cdecl;

procedure Deleteruntrace; cdecl;

function Runtracesize: Integer; cdecl;

function Findprevruntraceip(ip: ULONG; startback: Integer): Integer; cdecl;

function Findnextruntraceip(ip: ULONG; startback: Integer): Integer; cdecl;

function Getruntraceregisters(nback: Integer; preg: p_reg; pold: p_reg;
                              cmd: PChar; comment: PChar): Integer; cdecl;

function Getruntraceprofile(addr: ULONG; size: ULONG; profile: PULONG): Integer; cdecl;

procedure Scrollruntracewindow(back: Integer); cdecl;

function Createprofilewindow(base: ULONG; size: ULONG): HWND; cdecl;


////////////////////////////////////////////////////////////////////////////////
///////////////////////////////// CODE INJECTION ///////////////////////////////

type
  INJECTANSWER = function(data: PChar; datasize: ULONG; parm2: ULONG): Integer; cdecl;

  p_inject = ^t_inject;
  t_inject = packed record
    codesize: ULONG;
    code: PChar;
    stacksize: Integer;
    datatype: Integer;
  end;

function Injectcode(threadid: ULONG; inject: p_inject; data: PChar;
                    datasize: ULONG; parm1: ULONG; parm2: ULONG;
                    answerfunc: INJECTANSWER): Integer; cdecl;


////////////////////////////////////////////////////////////////////////////////
///////////////////////////// CPU-SPECIFIC FUNCTIONS ///////////////////////////

// Setcpu modes.
const
  CPU_ASMHIST       = $00001;           // Add change to Disassembler history
  CPU_ASMCENTER     = $00004;           // Make address in the middle of window
  CPU_ASMFOCUS      = $00008;           // Move focus to Disassembler
  CPU_DUMPHIST      = $00010;           // Add change to Dump history
  CPU_DUMPFIRST     = $00020;           // Make address the first byte in Dump
  CPU_DUMPFOCUS     = $00080;           // Move focus to Dump
  CPU_REGAUTO       = $00100;           // Automatically switch to FPU/MMX/3DNow!
  CPU_RUNTRACE      = $00200;           // Show run trace data at offset asmaddr
  CPU_STACKFOCUS    = $00800;           // Move focus to Stack
  CPU_NOCREATE      = $04000;           // Don't create CPU window if absent
  CPU_REDRAW        = $08000;           // Redraw CPU window immediately
  CPU_NOFOCUS       = $10000;           // Don't assign focus to main window


procedure Setcpu(threadid: ULONG; asmaddr: ULONG; dumpaddr: ULONG;
                 stackaddr: ULONG; mode: Integer); cdecl;

procedure Setdisasm(asmaddr: ULONG; selsize: ULONG; mode: Integer); cdecl;

procedure Redrawdisassembler; cdecl;

procedure Getdisassemblerrange(pbase: PULONG; psize: PULONG); cdecl;

function Findprocbegin(addr: ULONG): ULONG; cdecl;

function Findprocend(addr: ULONG): ULONG; cdecl;

function Findprevproc(addr: ULONG): ULONG; cdecl;

function Findnextproc(addr: ULONG): ULONG; cdecl;

function Getproclimits(addr: ULONG; pstart: PULONG; pend: PULONG): Integer; cdecl;

procedure Sendshortcut(where: Integer; addr: ULONG; msg: Integer;
                       ctrl: Integer; shift: Integer; vkcode: Integer); cdecl;

/////////////////////////////////////////////////////////////////////////////////
//////////////////////////////// PROCESS CONTROL ////////////////////////////////

// Parameter stepmode in call to Go().
const
  STEP_SAME         = 0;                // Same action as on previous call
  STEP_RUN          = 1;                // Run program
  STEP_OVER         = 2;                // Step over
  STEP_IN           = 3;                // Step in
  STEP_SKIP         = 4;                // Skip sequence

type
  t_status = (                          // Thread/process status
    STAT_NONE,                          // Thread/process is empty
    STAT_STOPPED,                       // Thread/process suspended
    STAT_EVENT,                         // Processing debug event, process paused
    STAT_RUNNING,                       // Thread/process running
    STAT_FINISHED,                      // Process finished
    STAT_CLOSING                        // Process is requested to terminate
  );

function Getstatus:  t_status; cdecl;

function Go(threadid: ULONG; tilladdr: ULONG; stepmode: Integer;
            givechance: Integer; backupregs: Integer): Integer; cdecl;

function Suspendprocess(processevents: Integer): Integer; cdecl;

/////////////////////////////////////////////////////////////////////////////////
///////////////////////////// DECODING OF ARGUMENTS /////////////////////////////

const
  DASC_TEST         = 0;                // Test whether a string
  DASC_NOHEX        = 1;                // Test, print nothing if not a string
  DASC_ASCII        = 2;                // Force ASCII
  DASC_PASCAL       = 3;                // Force Pascal

function Findknownfunction(addr: ULONG; direct: Integer; level: Integer;
                           fname: PChar): PChar; cdecl;

function Decodeknownargument(addr: ULONG; arg: PChar; value: ULONG; valid: Integer;
                             s: PChar; mask: PChar; pset: PPChar): Integer; cdecl;

function Findunknownfunction(ip: ULONG; code: PChar; dec: PChar;
                             size: ULONG; fname: PChar): PChar; cdecl;

function Decodeascii(value: ULONG; s: PChar; len: Integer; mode: Integer): Integer; cdecl;

function Decodeunicode(value: ULONG; s: PChar; len: Integer): Integer; cdecl;

/////////////////////////////////////////////////////////////////////////////////
////////////////////////////// SOURCE CODE SUPPORT //////////////////////////////

const
  FIRST_CODE_LINE = $FFFFFFFF;          // First available source line

type
  p_sourceline = ^t_sourceline;
  t_sourceline = packed record          // Source line descriptor
    addr: ULONG;                        // Start address of corresponding code
    size: ULONG;                        // Code size
    srcname: ULONG;                     // Index of source name (as NM_DEBUG)
    line: ULONG;                        // 0-based line number
  end;


function Showsourcefromaddress(addr: ULONG; show: Integer): HWND; cdecl;

function Getresourcestring(pm: p_module; id: ULONG; s: PChar): Integer; cdecl;

function Getlinefromaddress(addr: ULONG): p_sourceline; cdecl;

function Getaddressfromline(addr0: ULONG; addr1: ULONG; path: PChar;
                            line: ULONG): ULONG; cdecl;

function Getsourcefilelimits(nameaddr: ULONG; addr0: PULONG; addr1: PULONG): Integer; cdecl;

function Decodefullvarname(pmod: p_module; psym: p_symvar; offset: Integer;
                           name: PChar): Integer; cdecl;

function Getbprelname(pmod: p_module; addr: ULONG; offset: LongInt;
                      s: PChar; nsymb: Integer): Integer; cdecl;

/////////////////////////////////////////////////////////////////////////////////
///////////////////////////////// WATCH SUPPORT /////////////////////////////////

function Createwatchwindow: HWND; cdecl;

function Deletewatch(indexone: Integer): Integer; cdecl;

function Insertwatch(indexone: Integer; text: PChar): Integer; cdecl;

function Getwatch(indexone: Integer; text: PChar): Integer; cdecl;

/////////////////////////////////////////////////////////////////////////////////
/////////////////////////// WINDOWS-SPECIFIC FUNCTIONS //////////////////////////

const
  MAXNEST           = 32;               // Max allowed code structure nesting

type
  p_window = ^t_window;
  t_window = packed record                    // Description of window
    hwnd: ULONG;                              // Window's handle
    dummy: ULONG;                             // Must be 1
    ltype: ULONG;                             // Type of window, TY_xxx
    parenthw: ULONG;                          // Handle of parent or 0
    winproc: ULONG;                           // Address of WinProc or 0
    threadid: ULONG;                          // ID of the owning thread
    exstyle: ULONG;                           // Extended style
    style: ULONG;                             // Style
    id: ULONG;                                // Identifier
    classproc: ULONG;                         // Address of default (class) WinProc
    child: Integer;                           // Index of next child
    level: Integer;                           // Level in genealogy (0: topmost)
    sibling: Integer;                         // Index of next sibling
    byparent: Integer;                        // Index when sorted by parent
    title: array[0..TEXTLEN-1] of Char;       // Window's title
    classname: array[0..TEXTLEN-1] of Char;   // Class name
    tree: array[0..MAXNEST-1] of Char;        // Tree display
  end;

function Createwinwindow: HWND; cdecl;

/////////////////////////////////////////////////////////////////////////////////
//////////////////////////////////// PATCHES ////////////////////////////////////

type
  p_patch = ^t_patch;
  t_patch = packed record
    addr: ULONG;                        // Base address of patch in memory
    size: ULONG;                        // Size of patch, bytes
    ltype: ULONG;                       // Type of patch, set of TY_xxx
    orig: array[0..TEXTLEN-1] of Char;  // Original code
    modify: array[0..TEXTLEN-1] of Char;// Patched code
  end;

function Createpatchwindow: HWND; cdecl;

